--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/styled-components": "^5.1.10",
+    "axios": "^0.21.1",
+    "insomnia": "0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-keydown": "^1.9.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "styled-components": "^5.3.0",
     "twin.macro": "^2.4.2",
     "uuid": "^8.3.2",
